# astroids

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  main.cpp
allegro/: font.cpp  music.cpp  sound.cpp
allegro/headers/: font.hpp  music.hpp  sound.hpp
game/: objects.cpp
game/headers/: objects.hpp
